--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <title>Vite + React</title>
   </head>
   <body>
+    <!-- for countdown timer's dialogbox popup createPortal  -->
+    <div id="modal"></div> 
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
